# ldpx

./: README.md  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/ldpx/: __init__.py
src/ldpx/click/: __init__.py  discover.py
src/ldpx/click/commands/: __init__.py  app.py  batch_utils.py  command_factory.py  config.py  exec.py  query.py  simple.py
src/ldpx/core/interfaces/: console.py
src/ldpx/core/models/: list2meta.py  record.py
src/ldpx/core/objs/: attr.py  console.py
src/ldpx/core/utils/: batch.py  discover.py  json.py  subprocess.py
src/ldpx/ext/: cache.py
src/ldpx/ext/models/: kmp.py  leidian_config.py  leidians_config.py  record.py
src/ldx/: __init__.py
src/ldx/click/: __init__.py  discover.py  utils_echo.py
src/ldx/click/commands/: __init__.py  app.py  command_factory.py  config.py  exec.py  query.py  simple.py
src/ldx/core/enums/: __init__.py
src/ldx/core/interfaces/: console.py
src/ldx/core/objs/: attr.py  console.py
src/ldx/core/utils/: batch.py
src/ldx/ext/: cache.py
src/ldx/ext/models/: leidian_config.py  leidians_config.py  record.py  smp.py
src/ldx/ext/utils/: dict.py
