[project]
name = "ldpx"
version = "0.3.0"
description = "ldplayer abstraction layer for python (bundled with a CLI with batch support)."
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.1.2",
]

[project.scripts]
ldpx = "ldpx.click:cli"

[project.optional-dependencies]
click = [
    "click>=8.3.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
